added functionality to draw on grid on mouse hover. Added features to clear and resize the grid, and added option to draw with a default color or random colors.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,20 @@
+body{
+    background-color: aliceblue;
+    font-family: sans-serif;
+}
+.button_container {
+    margin: 15px 0px 30px; 
+}
 .grid_container {
-    border-style: solid;
-    border-color: red;
     width: 500px;
     height: 500px;
     
 }
-.square{
+.square {
     background: black;
-    border: 1px solid white;
+    border: 1px solid darkgrey;
     float: left;
+}
+.colored {
+    background: darkred;
 }
